app.yml
apiVersion: v1
kind: Service
metadata:
  name: app-nginx-service
spec:
  type: NodePort
  selector:
    app: app-nginx
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx-deployment
  labels:
    servers: dmz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-nginx-deployment
  template:
    metadata:
      labels:
        app: app-nginx-deployment
    spec:
      containers:
      - name: app-nginx-deployment
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
