service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-service-toto
spec:
  selector:
    app: toto
  ports:
  - port: 8080
    targetPort: 80
